--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "typescript": "^5.2.2",
