--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-radio-group": "^1.1.3",
     "axios": "^1.6.7",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8"
+    "react-hook-form": "^7.51.0",
+    "styled-components": "^6.1.8",
+    "use-context-selector": "^1.4.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
@@ -27,7 +31,7 @@
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
-    "json-server": "^1.0.0-alpha.23",
+    "json-server": "^0.17.4",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
